# obsidian-nm

./: Cargo.toml  README.md
src/: commands.rs  errors.rs  lib.rs  main.rs  note_downloader.rs  utils.rs
