[package]
authors = ["solthodox"]
categories = ["development-tools", "development-tools"]
description = "A Obsidian notes manager written in rust. It allows to easily install notes and templates on your Obsidian vault."
edition = "2021"
exclude = [".github/*", ".vscode/*"]
homepage = "https://github.com/mario-eth/soldeer"
keywords = ["obsidian", "templates-manager"]
license = "MIT"
name = "obsidian-nm"
readme = "./README.md"
repository = ""
version = "0.1.0"

[dependencies]
clap = {    version = "4.5.9", features = ["derive"] }
git2 = "0.19.0"
tokio = "1.40.0"
yansi = "1.0.1"

[[bin]]
name = "soldeer"
path = "src/main.rs"
