[package]
authors = ["solthodox"]
categories = ["development-tools", "development-tools"]
description = "A Obsidian notes manager written in rust. It allows to easily install notes and templates on your Obsidian vault."
edition = "2021"
exclude = [".github/*", ".vscode/*"]
homepage = "https://github.com/mario-eth/soldeer"
keywords = ["obsidian", "templates-manager"]
license = "MIT"
name = "obsidian-nm"
readme = "./README.md"
repository = ""
version = "0.1.0"

[dependencies]
clap = {    version = "4.5.9", features = ["derive"] }
git2 = "0.15.0"
tokio = { version = "1.38.0", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
] }
yansi = "1.0.1"
thiserror = "1.0.63"
tempfile = "3.7"

[[bin]]
name = "soldeer"
path = "src/main.rs"
